--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                 
                 <li class="project">
                     <div class="project__wrapper">
-                        <img src="./assets/gmailscreenshot.png" class="project__img" alt="">
+                        <img src="./gmailscreenshot.png" class="project__img" alt="">
                         <div class="project__wrapper--bg"></div>
                     <div class="project__description">
                         <h3 class="project__description--title">
@@ -202,7 +202,7 @@
 
                 <li class="project">
                     <div class="project__wrapper">
-                        <img src="./assets/linkedinscreenshot.png" class="project__img" alt="">
+                        <img src="./linkedinscreenshot.png" class="project__img" alt="">
                         <div class="project__wrapper--bg"></div>
                     <div class="project__description">
                         <h3 class="project__description--title">
@@ -298,7 +298,7 @@
                             effect with this monster website!
                         </p>
                         <div class="project__description--links">
-                            <a href="https://github.com/aamin2/abdifatahamin.github.io" class="project__description--link">
+                            <a href="https://github.com/aamin2/personal-eportfolio" class="project__description--link">
                                 <i class="fab fa-github"></i>
                             </a>
                             
