--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
                             effect with this monster website!
                         </p>
                         <div class="project__description--links">
-                            <a href="https://github.com/aamin2/personal-eportfolio" class="project__description--link">
+                            <a href="https://github.com/aamin2/abdifatahamin.github.io" class="project__description--link">
                                 <i class="fab fa-github"></i>
                             </a>
                             
