--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                    Here's a bit more <b class="purple click" onclick="toggleModal()">about me</b>.
                    </p>
                    <div class="social__list">
-                       <a href="https://google.com" target="_blank" class="social__link click">
+                       <a href="https://www.linkedin.com/in/abdiamin/" target="_blank" class="social__link click">
                    <i class="fab fa-linkedin-in"></i>
                    </a>
                    <a href="https://github.com/aamin2" target="_blank" class="social__link click">
