--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                    Here's a bit more <b class="purple click" onclick="toggleModal()">about me</b>.
                    </p>
                    <div class="social__list">
-                       <a href="https://www.linkedin.com/in/abdiamin/" target="_blank" class="social__link click">
+                       <a href="https://google.com" target="_blank" class="social__link click">
                    <i class="fab fa-linkedin-in"></i>
                    </a>
                    <a href="https://github.com/aamin2" target="_blank" class="social__link click">
@@ -172,6 +172,60 @@
                 
                 <li class="project">
                     <div class="project__wrapper">
+                        <img src="./weather app.png" class="project__img" alt="">
+                        <div class="project__wrapper--bg"></div>
+                    <div class="project__description">
+                        <h3 class="project__description--title">
+                            React Weather App 
+                        </h3>
+                        <h4 class="project__description--sub-title">
+                            HTML, CSS, JavaScript, React, Firebase, JSON     
+                        </h4>
+                        <p class="project__description--para">
+                            This fully responsive react weather application give you real time weather from a city of your choice. Using firebase hosting,
+                             I implemented an API that will give you they answer in seconds. 
+                            Using modern HTML, CSS, JavaScript, and React this beautiful application was extremally enjoyable and they satisfaction was unbelievable upon completion!
+                        </p>
+                        <div class="project__description--links">
+                            <a href="https://github.com/aamin2/weather-app" target="_blank" class="project__description--link">
+                                <i class="fab fa-github"></i>
+                            </a>
+                            <a href="http://abdi-react-app.netlify.app/" target="_blank" class="project__description--link">
+                                <i class="fas fa-link"></i>
+                            </a>
+                        </div>
+                    </div>
+                    </div>
+
+                    <div class="project__wrapper">
+                        <img src="./google-clone.png" class="project__img" alt="">
+                        <div class="project__wrapper--bg"></div>
+                    <div class="project__description">
+                        <h3 class="project__description--title">
+                            Responsive Google Clone
+                        </h3>
+                        <h4 class="project__description--sub-title">
+                            HTML, Tailwind.CSS, JavaScript, React, Firebase, JSON     
+                        </h4>
+                        <p class="project__description--para">
+                            This fully responsive google clone is one I am proud of the most. Deployed with firebase, I worked on this using best practices from React.js. 
+                            Implementing googles custom search API and used context API to make it fully responsive. Also I efficiently used react router dom to provide 
+                            instant results through this project. This absolute beauty of a display show the clean cut code used and as you can look via github I maintained and 
+                            make it my goal to keep my code as clean as possible with they obvious fact of this project taking lines and lines of code to make. This one makes me smile, 
+                            feel free to check out my code via Github.
+                        </p>
+                        <div class="project__description--links">
+                            <a href="https://github.com/aamin2/google-clone" target="_blank" class="project__description--link">
+                                <i class="fab fa-github"></i>
+                            </a>
+                            <a href="https://clone-76ed6.web.app/" target="_blank" class="project__description--link">
+                                <i class="fas fa-link"></i>
+                            </a>
+                        </div>
+                    </div>
+                    </div>
+
+                    <div class="project__wrapper">
                         <img src="./gmailscreenshot.png" class="project__img" alt="">
                         <div class="project__wrapper--bg"></div>
                     <div class="project__description">
@@ -188,7 +242,7 @@
                             of they initial sign on page.
                         </p>
                         <div class="project__description--links">
-                            <a href="https://github.com/aamin2/gmailclone/tree/main/src" target="_blank" class="project__description--link">
+                            <a href="https://github.com/aamin2/gmailclone" target="_blank" class="project__description--link">
                                 <i class="fab fa-github"></i>
                             </a>
                             <a href="https://clone-6decd.web.app" target="_blank" class="project__description--link">
@@ -199,7 +253,6 @@
                     </div>
                 </li>
                 
-
                 <li class="project">
                     <div class="project__wrapper">
                         <img src="./linkedinscreenshot.png" class="project__img" alt="">
@@ -248,7 +301,7 @@
                             <a href="https://github.com/aamin2/Library" target="_blank" class="project__description--link">
                                 <i class="fab fa-github"></i>
                             </a>
-                            <a href="https://aamin2.github.io/Library/" target="_blank" class="project__description--link">
+                            <a href="https://aamin2.github.io/freelance/" target="_blank" class="project__description--link">
                                 <i class="fas fa-link"></i>
                             </a>
                         </div>
