--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abdifatah Amin</title>
     <script src="./main.js"></script>
+    <link rel="stylesheet" href="./index.tsx">
     <link rel="stylesheet" href="./style.css">
     <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous" ></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
@@ -196,7 +197,9 @@
                         </div>
                     </div>
                     </div>
+                </li>
 
+                <li class="project">
                     <div class="project__wrapper">
                         <img src="./google-clone.png" class="project__img" alt="">
                         <div class="project__wrapper--bg"></div>
@@ -224,7 +227,9 @@
                         </div>
                     </div>
                     </div>
+                     </li>
 
+                     <li class="project">
                     <div class="project__wrapper">
                         <img src="./gmailscreenshot.png" class="project__img" alt="">
                         <div class="project__wrapper--bg"></div>
