--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abdifatah Amin</title>
     <script src="./main.js"></script>
-    <link rel="stylesheet" href="./index.tsx">
+    <script src="./main.js"></script>
     <link rel="stylesheet" href="./style.css">
     <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous" ></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
@@ -173,7 +173,7 @@
                 
                 <li class="project">
                     <div class="project__wrapper">
-                        <img src="./weather app.png" class="project__img" alt="">
+                        <img src="./abdi weather app.png" class="project__img" alt="">
                         <div class="project__wrapper--bg"></div>
                     <div class="project__description">
                         <h3 class="project__description--title">
