--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
                             <a href="https://github.com/aamin2/Library" target="_blank" class="project__description--link">
                                 <i class="fab fa-github"></i>
                             </a>
-                            <a href="https://aamin2.github.io/freelance/" target="_blank" class="project__description--link">
+                            <a href="https://aamin2.github.io/Library/" target="_blank" class="project__description--link">
                                 <i class="fas fa-link"></i>
                             </a>
                         </div>
