--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                    <a href="https://github.com/aamin2" target="_blank" class="social__link click">
                    <i class="fab fa-github"></i>
                    </a>
-                   <a href="./Frontend resume.docx" target="_blank" class="social__link click">
+                   <a href="Frontend resume.pdf" target="_blank" class="social__link click">
                    <i class="fas fa-file-pdf"></i>
                    </a>
                    </div>
